# PracaInzynierska

./: CMakeLists.txt
clockMachineSimulator/: CMakeLists.txt  main.cpp
clockMachineSimulator/src/: TimeSynchronizator.cpp  TimeSynchronizator.h  clockMachineSimulator.cpp  clockMachineSimulator.h  main.cpp
clockMachineSimulator/tests/: test_main.cpp
